objects/EUR_CRM_POSM_Audit_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <formula>EUR_CRM_POS_Material__r.EUR_CRM_Brand__r.EUR_CRM_Category_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsPhotoAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if a record has an attachment with image content type.</description>
        <label>Is Photo Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_Id__c</fullName>
        <description>Tech field to avoid duplicates</description>
        <label>Mobile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POSM_Audit__c</fullName>
        <label>POSM Audit</label>
        <referenceTo>EUR_CRM_POSM_Audit__c</referenceTo>
        <relationshipLabel>POSM Audit Item (EU)</relationshipLabel>
        <relationshipName>POSM_Audit_Item_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material_Code__c</fullName>
        <formula>EUR_CRM_POS_Material__r.EUR_CRM_POS_Material_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POS Material Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipLabel>POSM Audit Item (EU)</relationshipLabel>
        <relationshipName>POSM_Audit_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity_on_Exit__c</fullName>
        <formula>(EUR_CRM_Quantity__c + EUR_CRM_Visit_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity on Exit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit (EU)</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipLabel>POSM Audit Item (EU)</relationshipLabel>
        <relationshipName>POSM_Audit_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Quantity__c</fullName>
        <label>Given Quantity during Visit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POSM Audit Item (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMI-{00000000}</displayFormat>
        <label>POSM Audit Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POSM Audit Item (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AT_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR AT POSM Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Off_Trade_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BG Off Trade POSM Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BG On Trade POSM Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DB_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR DB POSM Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_IDL_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR IDL POSM Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NL_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR NL POSM Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_On_Trade_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR RU On Trade POSM Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_POSM_Audit_Item</fullName>
        <active>true</active>
        <label>EUR ZA POSM Audit Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>